[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/GraphNode.gd" type="Script" id=1]
[ext_resource path="res://core/TextEditExpand.gd" type="Script" id=2]
[ext_resource path="res://core/ImageTextureRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/Light_Theme.tres" type="Theme" id=4]
[ext_resource path="res://core/ExpandingRichTextLabel.gd" type="Script" id=7]
[ext_resource path="res://Themes/Fonts/italics.tres" type="DynamicFont" id=8]
[ext_resource path="res://Themes/Fonts/regular.tres" type="DynamicFont" id=9]
[ext_resource path="res://Themes/Fonts/boldItalics.tres" type="DynamicFont" id=10]
[ext_resource path="res://Themes/Fonts/bold.tres" type="DynamicFont" id=11]
[ext_resource path="res://core/ImageLoader.tscn" type="PackedScene" id=12]

[node name="GraphNode" type="GraphNode" groups=[
"Persist",
]]
margin_right = 265.0
margin_bottom = 111.0
rect_min_size = Vector2( 160, 40 )
theme = ExtResource( 4 )
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageLoader" parent="." instance=ExtResource( 12 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 28.0
margin_top = 24.0
margin_right = 279.0
margin_bottom = 48.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageSettings" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 251.0
margin_bottom = 24.0

[node name="URL_Label" type="Label" parent="HBoxContainer/ImageSettings"]
margin_top = 1.0
margin_right = 66.0
margin_bottom = 23.0
text = "Img URL:"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/ImageSettings"]
margin_left = 70.0
margin_right = 190.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 20 )
hint_tooltip = "Open URL in Browser"
focus_neighbour_left = NodePath("../../BodyText")
focus_neighbour_top = NodePath("../../BodyText")
focus_neighbour_right = NodePath("../../BodyText")
focus_neighbour_bottom = NodePath("../../BodyText")
focus_next = NodePath("../../BodyText")
focus_previous = NodePath("../../BodyText")
wrap_enabled = true
script = ExtResource( 2 )
expand = false
min_line = 1
max_line = 1

[node name="LockButton" type="CheckBox" parent="HBoxContainer/ImageSettings"]
margin_left = 194.0
margin_right = 251.0
margin_bottom = 24.0
pressed = true
text = "Lock"

[node name="ImageContainer" type="HBoxContainer" parent="."]
margin_left = 28.0
margin_top = 49.0
margin_right = 279.0
margin_bottom = 49.0
alignment = 1

[node name="TextureRect" parent="ImageContainer" instance=ExtResource( 3 )]
margin_left = 125.0
margin_right = 125.0
margin_bottom = 0.0
rect_min_size = Vector2( 0, 0 )
stretch_mode = 5

[node name="CaptionContainer" type="MarginContainer" parent="."]
margin_left = 28.0
margin_top = 50.0
margin_right = 279.0
margin_bottom = 82.0

[node name="RichTextContainer" type="MarginContainer" parent="CaptionContainer"]
margin_right = 251.0
margin_bottom = 32.0

[node name="RichText" type="RichTextLabel" parent="CaptionContainer/RichTextContainer"]
margin_right = 251.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
focus_neighbour_left = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_top = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_right = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_bottom = NodePath("../HBoxContainer/TextEdit")
focus_next = NodePath("../HBoxContainer/TextEdit")
focus_previous = NodePath("../HBoxContainer/TextEdit")
custom_fonts/bold_italics_font = ExtResource( 10 )
custom_fonts/italics_font = ExtResource( 8 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
script = ExtResource( 7 )

[node name="BodyContainer" type="MarginContainer" parent="CaptionContainer"]
visible = false
margin_right = 251.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="BodyText" type="TextEdit" parent="CaptionContainer/BodyContainer"]
margin_right = 251.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )
focus_neighbour_left = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_top = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_right = NodePath("../HBoxContainer/TextEdit")
focus_neighbour_bottom = NodePath("../HBoxContainer/TextEdit")
focus_next = NodePath("../HBoxContainer/TextEdit")
focus_previous = NodePath("../HBoxContainer/TextEdit")
custom_fonts/font = ExtResource( 9 )
wrap_enabled = true
script = ExtResource( 2 )
min_line = 2
max_line = 20
[connection signal="close_request" from="." to="." method="_on_Node_close_request"]
[connection signal="raise_request" from="." to="." method="_on_Node_raise_request"]
[connection signal="resize_request" from="." to="." method="_on_Node_resize_request"]
[connection signal="gui_input" from="HBoxContainer/ImageSettings/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="text_changed" from="HBoxContainer/ImageSettings/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/ImageSettings/TextEdit" to="HBoxContainer/ImageSettings/TextEdit" method="_on_ExpandingText_text_changed"]
[connection signal="toggled" from="HBoxContainer/ImageSettings/LockButton" to="." method="_on_LockButton_toggled"]
[connection signal="mouse_entered" from="CaptionContainer" to="." method="_on_CaptionContainer_mouse_entered"]
[connection signal="mouse_exited" from="CaptionContainer" to="." method="_on_CaptionContainer_mouse_exited"]
[connection signal="gui_input" from="CaptionContainer/RichTextContainer/RichText" to="." method="_on_RichText_gui_input"]
[connection signal="mouse_entered" from="CaptionContainer/RichTextContainer/RichText" to="." method="_on_CaptionContainer_mouse_entered"]
[connection signal="gui_input" from="CaptionContainer/BodyContainer/BodyText" to="." method="_on_BodyText_gui_input"]
[connection signal="mouse_exited" from="CaptionContainer/BodyContainer/BodyText" to="." method="_on_CaptionContainer_mouse_exited"]
[connection signal="text_changed" from="CaptionContainer/BodyContainer/BodyText" to="." method="_on_BodyText_text_changed"]
[connection signal="text_changed" from="CaptionContainer/BodyContainer/BodyText" to="CaptionContainer/BodyContainer/BodyText" method="_on_ExpandingText_text_changed"]
